--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
+    "ts-node": "^10.9.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -48,17 +49,20 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.0",
+    "git-commit-msg-linter": "^4.5.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "validate-branch-name": "^1.3.0"
   },
   "scripts": {
     "build": "react-scripts build",
     "deploy": "",
+    "check-types": "tsc",
     "start": "react-scripts start",
     "test": "react-scripts test --watchAll=false --findRelatedTests --bail",
     "eject": "react-scripts eject",
@@ -76,9 +80,9 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "pnpm lint",
-      "pnpm prettier --write",
-      "pnpm test"
+      "npm lint",
+      "npm prettier --write --ignore-unknown",
+      "npm test"
     ]
   },
   "husky": {
