--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
-    "@mikro-orm/cli": "^5.6.6",
-    "@mikro-orm/core": "^5.6.6",
-    "@mikro-orm/knex": "^5.6.6",
-    "@mikro-orm/migrations": "^5.6.6",
-    "@mikro-orm/postgresql": "^5.6.6",
+    "@mikro-orm/cli": "^5.6.7",
+    "@mikro-orm/core": "^5.6.7",
+    "@mikro-orm/knex": "^5.6.7",
+    "@mikro-orm/migrations": "^5.6.7",
+    "@mikro-orm/postgresql": "^5.6.7",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.4",
+    "@mui/material": "^5.11.5",
     "@types/react-table": "^7.7.14",
+    "lint": "0.8.19",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +28,7 @@
     "@babel/plugin-syntax-flow": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.20.7",
     "@rollup/plugin-terser": "^0.3.0",
-    "@testing-library/dom": "^8.19.1",
+    "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -36,18 +37,18 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.3",
@@ -68,19 +69,21 @@
     "eject": "react-scripts eject",
     "stage": "serve -s build",
     "watch": "tsc -watch",
-    "lint-js": "eslint ./*.js --fix-dry-run",
-    "lint-ts": "eslint src/**/*.ts --fix-dry-run",
-    "lint-tsx": "eslint src/**/*.tsx --fix-dry-run",
-    "lint:fix-js": "eslint ./*.js --fix",
-    "lint:fix-ts": "eslint src/**/*.ts --fix",
-    "lint:fix-tsx": "eslint src/**/*.tsx --fix",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix-dry-run",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint-js": "eslint **/*.js --fix-dry-run",
+    "lint-ts": "eslint **/*.ts --fix-dry-run",
+    "lint-jsx": "eslint **/*.jsx --fix-dry-run",
+    "lint-tsx": "eslint **/*.tsx --fix-dry-run",
+    "lint:fix-js": "eslint **/*.js --fix",
+    "lint:fix-ts": "eslint **/*.ts --fix",
+    "lint:fix-jsx": "eslint **/*.jsx --fix",
+    "lint:fix-tsx": "eslint **/*.tsx --fix",
+    "lint": "eslint **/*.{js,jsx,ts,tsx} --fix-dry-run",
+    "lint:fix": "eslint **/*.{js,jsx,ts,tsx} --fix",
     "prepare": "husky install"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "eslint . --ext .js,.jsx,.ts,.tsx --fix-dry-run",
+      "eslint **/*.{js,jsx,ts,tsx} --fix-dry-run",
       "npx prettier --write --ignore-unknown",
       "npx test"
     ]
