--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@babel/core": "^7.20.12",
     "@babel/plugin-syntax-flow": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.20.7",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@rollup/plugin-terser": "^0.3.0",
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -39,6 +41,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "commitizen": "^4.2.6",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -93,11 +96,6 @@
       "pre-commit": "lint-staged"
     }
   },
-  "validate-branch-name": {
-    "pattern": "^(master|main|develop){1}$|^(feature|fix|hotfix|release)/.+$",
-    "errorMsg": "Invalid branch name. Please use (master|main|develop) or (feature|fix|hotfix|release) ex. develop/ticket-id/branch-name or develop/branch-name or feature/ticket-id/branch-name or feature/branch-name."
-  },
-  "jest": {},
   "eslintConfig": {
     "extends": [
       "react-app",
