chore: added potential npm run options

--- a/package.json
+++ b/package.json
@@ -65,10 +65,16 @@
   },
   "scripts": {
     "build": "react-scripts build",
+    "build:tsc": "tsc -p tsconfig.prod.json",
     "deploy": "",
     "check-types": "tsc",
     "start": "react-scripts start",
+    "start:dev": "nodemon",
+    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./build/index.js",
     "test": "react-scripts test --watchAll=false --findRelatedTests src/** --bail",
+    "test:jest": "jest --watchAll=false --findRelatedTests src/** --bail",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject",
     "stage": "serve -s build",
     "watch": "tsc -watch",
