chore: expose cra configs

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "customize-cra": "^1.0.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "19.0.4",
@@ -60,41 +61,38 @@
     "nodemon": "^2.0.20",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "react-app-rewired": "^2.2.1",
     "typescript": "^4.9.4",
     "validate-branch-name": "^1.3.0"
   },
   "scripts": {
-    "build": "react-scripts build",
-    "build:tsc": "tsc -p tsconfig.prod.json",
+    "build": "react-app-rewired build",
     "deploy": "",
     "check-types": "tsc",
-    "start": "react-scripts start",
-    "start:dev": "nodemon",
-    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./build/index.js",
-    "test": "react-scripts test --watchAll=false --findRelatedTests src/** --bail",
-    "test:jest": "jest --watchAll=false --findRelatedTests src/** --bail",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "eject": "react-app-rewired eject",
     "stage": "serve -s build",
     "watch": "tsc -watch",
+    "test": "react-app-rewired test --watchAll=false --findRelatedTests src/** --bail",
+    "test:watch": "react-app-rewired test --watch --bail",
+    "test:coverage": "react-app-rewired test --coverage",
+    "lint": "eslint **/*.{js,jsx,ts,tsx} --fix-dry-run",
     "lint-js": "eslint **/*.js --fix-dry-run",
     "lint-ts": "eslint **/*.ts --fix-dry-run",
     "lint-jsx": "eslint **/*.jsx --fix-dry-run",
     "lint-tsx": "eslint **/*.tsx --fix-dry-run",
+    "lint:fix": "eslint **/*.{js,jsx,ts,tsx} --fix",
     "lint:fix-js": "eslint **/*.js --fix",
     "lint:fix-ts": "eslint **/*.ts --fix",
     "lint:fix-jsx": "eslint **/*.jsx --fix",
     "lint:fix-tsx": "eslint **/*.tsx --fix",
-    "lint": "eslint **/*.{js,jsx,ts,tsx} --fix-dry-run",
-    "lint:fix": "eslint **/*.{js,jsx,ts,tsx} --fix",
     "prepare": "husky install"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "eslint **/*.{js,jsx,ts,tsx} --fix-dry-run",
       "npx prettier --write --ignore-unknown",
-      "npx react-scripts test --watchAll=false --findRelatedTests src/** --bail"
+      "npx run test"
     ]
   },
   "husky": {
