--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,13 @@
 
 # misc
 .DS_Store
-.env.local
+.env
+.env.production
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local
 
 npm-debug.log*
 yarn-debug.log*
