--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react-table": "^7.7.14",
     "lint": "0.8.19",
     "pg": "^8.8.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.2.5",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
     "ts-node": "^10.9.1",
@@ -36,6 +38,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -48,7 +51,6 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -63,6 +65,7 @@
     "prettier": "^2.8.3",
     "react-app-rewired": "^2.2.1",
     "typescript": "^4.9.4",
+    "typescript-to-proptypes": "^2.2.1",
     "validate-branch-name": "^1.3.0"
   },
   "scripts": {
@@ -89,28 +92,17 @@
     "lint:fix-tsx": "eslint **/*.tsx --fix",
     "prepare": "husky install"
   },
-  "lint-staged": {
-    "*.js": [
-      "eslint **/*.js --fix-dry-run --color"
-    ],
-    "*.jsx": [
-      "eslint **/*.jsx --fix-dry-run --color"
-    ],
-    "*.ts": [
-      "eslint **/*.ts --fix-dry-run --color"
-    ],
-    "*.tsx": [
-      "eslint **/*.tsx --fix-dry-run --color"
-    ],
-    "**/*.{js,jsx,ts,tsx}": [
-      "npx prettier --write --ignore-unknown",
-      "npm run test"
-    ]
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint **/*.{js,jsx,ts,tsx} --fix-dry-run",
+      "npx prettier --write --ignore-unknown",
+      "npm run test"
+    ]
   },
   "eslintConfig": {
     "extends": [
