--- a/package.json
+++ b/package.json
@@ -3,80 +3,87 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
-    "@mikro-orm/cli": "^5.6.7",
-    "@mikro-orm/core": "^5.6.7",
-    "@mikro-orm/knex": "^5.6.7",
-    "@mikro-orm/migrations": "^5.6.7",
-    "@mikro-orm/postgresql": "^5.6.7",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.5",
+    "@mikro-orm/cli": "^5.7.5",
+    "@mikro-orm/core": "^5.7.5",
+    "@mikro-orm/knex": "^5.7.5",
+    "@mikro-orm/migrations": "^5.7.5",
+    "@mikro-orm/postgresql": "^5.7.5",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@types/react-table": "^7.7.14",
     "lint": "0.8.19",
-    "pg": "^8.8.0",
+    "pg": "^8.10.0",
+    "postcss-cli": "^10.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.2.5",
+    "react-hook-form": "^7.43.9",
+    "react-intl": "^6.4.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.57.1",
+    "reflect-metadata": "^0.1.13",
+    "sass": "^1.62.1",
     "ts-node": "^10.9.1",
+    "typeorm": "^0.3.16",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-syntax-flow": "^7.18.6",
-    "@babel/plugin-transform-react-jsx": "^7.20.7",
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-syntax-flow": "^7.21.4",
+    "@babel/plugin-transform-react-jsx": "^7.21.5",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@rollup/plugin-terser": "^0.3.0",
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.7",
     "@types/prop-types": "^15.7.5",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "customize-cra": "^1.0.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.32.0",
+    "eslint": "^8.40.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "git-commit-msg-linter": "^4.5.0",
+    "git-commit-msg-linter": "^4.11.1",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "nodemon": "^2.0.20",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
+    "nodemon": "^2.0.22",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
     "react-app-rewired": "^2.2.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "typescript-to-proptypes": "^2.2.1",
     "validate-branch-name": "^1.3.0"
   },
   "scripts": {
     "build": "react-app-rewired build",
+    "build:css": "postcss src/assets/styles/*.{css|scss} --dir dest",
+    "watch:css": "postcss src/assets/styles/*.{css|scss} --dir dest -w",
+    "watch": "tsc -watch",
     "deploy": "",
     "check-types": "tsc",
+    "start": "NODE_ENV=production react-app-rewired start",
     "start:production": "NODE_ENV=production react-app-rewired start",
     "start:optimized": "NODE_ENV=production react-app-rewired build && serve -s build",
     "start:development": "NODE_ENV=development react-app-rewired start",
-    "eject": "react-app-rewired eject",
-    "watch": "tsc -watch",
     "test": "react-app-rewired test --watchAll=false --findRelatedTests src/** --bail",
     "test:watch": "react-app-rewired test --watch --bail",
     "test:coverage": "react-app-rewired test --coverage",
@@ -90,7 +97,8 @@
     "lint:fix-ts": "eslint **/*.ts --fix",
     "lint:fix-jsx": "eslint **/*.jsx --fix",
     "lint:fix-tsx": "eslint **/*.tsx --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "eject": "react-app-rewired eject"
   },
   "husky": {
     "hooks": {
